tests/codegen/compile/runtime/fail/non_async.stderr
error: Only async functions are supported
 --> $DIR/non_async.rs:6:1
  |
6 | fn main() {}
  | ^^
